--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -49,14 +50,14 @@ dependencies {
 
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
 
-    // region Coroutines
+    // region coroutines
     def coroutines = '1.6.4'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:$coroutines"
     // endregion
 
-    // region Network
+    // region network
     def retrofit = '2.9.0'
     implementation "com.squareup.retrofit2:retrofit:$retrofit"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit"
@@ -69,26 +70,32 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.4.1'
     // endregion
 
-    // region Mvvm
+    // region mvvm
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.6.1'
-    implementation 'androidx.fragment:fragment-ktx:1.5.5'
+    implementation 'androidx.fragment:fragment-ktx:1.5.6'
     // endregion
 
-    // region Utils
+    // region utils
     implementation 'com.jakewharton.timber:timber:5.0.1'
     implementation 'io.coil-kt:coil:2.2.2'
     // endregion
 
-    // region Location
+    // region location
     implementation 'com.google.android.gms:play-services-location:21.0.1'
     // endregion
 
-    // region Navigation
-    def nav_version = '2.5.3'
-    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
-    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
-    implementation "androidx.navigation:navigation-runtime-ktx:$nav_version"
+    // region navigation
+    def navigation = '2.5.3'
+    implementation "androidx.navigation:navigation-fragment-ktx:$navigation"
+    implementation "androidx.navigation:navigation-ui-ktx:$navigation"
+    implementation "androidx.navigation:navigation-runtime-ktx:$navigation"
+    // endregion
+
+    // region dagger2
+    def dagger = '2.45'
+    implementation "com.google.dagger:dagger:$dagger"
+    kapt "com.google.dagger:dagger-compiler:$dagger"
     // endregion
 
     testImplementation 'junit:junit:4.13.2'
