--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,10 @@ buildscript {
     repositories {
         mavenCentral()
     }
+    dependencies {
+        def nav_version = "2.5.3"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
+    }
 }
 
 plugins {
